<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/main"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">
  <LinearLayout
    android:id="@+id/mainDisplay"
    android:layout_width="409dp"
    android:layout_height="729dp"
    android:paddingTop="100dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">
    <TextView
      android:id="@+id/gameTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="50dp"
      android:gravity="center"
      android:text="@string/app_name"
      android:textColor="@color/black"
      android:textSize="60sp" />
    <LinearLayout
      android:id="@+id/difficultyButtonContainer"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <Button
        android:id="@+id/easyButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/design_default_color_primary"
        android:text="@string/easy_button_text"
        android:textColor="@color/white"
        android:textSize="30sp" />
      <Button
        android:id="@+id/normalButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/normal_button_text"
        android:textColor="@color/white"
        android:textSize="30sp" />
      <Button
        android:id="@+id/hardButton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/hard_button_text"
        android:textColor="@color/white"
        android:textSize="30sp" />
    </LinearLayout>
  </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>